# E_com_clt_pers_ima_grok_campagn

./: .flake8  .replit  Dockerfile  Etat_Projet_DevOps_NinjaLead.md  Optimisations_Performance_NinjaLead.md  README.md  Rapport_Avancement_02_Juin_2025.md  Semaine1_Accomplissements_DevOps.md  Semaine2_CICD_Securite_DevOps.md  Semaine2_Jour1_Accomplissements.md  Strategie_Lancement_Marketing_NinjaLead.md  add_activity_data_column.py  add_auth_provider_columns.py  add_avatar_prompt.py  add_boutique_id_column.py  add_campaign_metrics.py  add_gdpr_tables.py  add_language_columns.py  add_numeric_id_column.py  add_persona_table.py  add_seo_audit_tables.py  add_stored_images_table.py  add_usage_count.py  add_user_ownership.py  add_user_ownership_flask.py  add_user_stats_columns.py  ai_utils.py  aliexpress_importer.py  aliexpress_search.py  analytics_integration.py  app.py  app.py.backup  app_fixed.py  app_simple.py  apply_security_fixes.py  asset_optimization.py  asset_optimizer.py  audit_trail.py  automated_migration_system.py  backup_manager.py  (+83 more)
.github/workflows/: automated-migrations.yml  ci-cd.yml
app/: __init__.py  models.py
app/routes/: products.py
app/utils/: __init__.py  i18n.py
attached_assets/: CGU.md  Mentions_legales.md  Pasted-1-Comprendre-votre-march-et-vos-utilisateurs-Avant-de-vous-lancer-assurez-vous-de-bien-comprendre-1748787099820.txt  Pasted-Below-is-the-requested-campaign-type-marketing-content-piece-for-name-crafted-based-on-the-prov-1748690458293.txt  Pasted-Voici-une-liste-de-questions-r-ponses-FAQ-probables-et-utiles-pour-l-application-MarkEasy-bas-e-s-1747231705843.txt  Politique_confidentialite.md  Politique_cookies.md
instance/: boutique.db
migrations/: add_campaign_metrics.py  add_html_columns.py  add_language_columns.py  add_user_ownership.py
services/: campaign_schema.py  campaign_service.py  persona_schema.py  persona_service.py  product_schema.py  product_service.py
static/: manifest.json  site.webmanifest
static/css/: auth-pages.css  brand-ai-fix.css  custom.css  dashboard-improvements.css  feedback-mobile-ios.css  global-orange-icons.css  header-banner-responsive.css  high-contrast-dark.css  high-contrast.css  icon-system.css  loading-animation.css  loading.css  markeasy-animations.css  markeasy-theme.css  mobile-first-optimization.css  mobile-optimizations.css  mobile-responsive-fix.css  navbar-orange-theme.css  ninja-icons-orange.css  ninja-theme.css  orange-theme.css  table-horizontal-scroll.css  theme-colors.css  theme-switcher.css
static/img/: browserconfig.xml
static/js/: app.js  loading-indicators.js  loading-manager.js  loading-simple.js  loading.js  markeasy-animations.js  ninja-feedback.js  ninja-interactions.js  persona-enhancements.js  progressive-loading.js  sentry-config.js  sentry-init.js  sentry-react.js  service-worker.js  simple-ninja-feedback.js
templates/: boutique_dashboard.html  boutique_dashboard_simple.html  campaign_detail.html  campaign_language_settings.html  campaigns.html  copy_ai_tool.html  customer_detail.html  customer_edit.html  dashboard.html  faq.html  image_generation.html  index.html  integrations_config.html  language_settings.html  layout.html  login.html  metrics.html  metrics_advanced.html  offline.html  osp_analysis_detail.html  osp_analysis_edit.html  osp_tools.html  personas.html  product_analysis.html  product_detail.html  product_edit.html  product_import.html  product_shopify_export.html  products.html  profile_config.html  profiles.html  seo_audit_dashboard.html  seo_audit_detail.html  seo_keywords.html  simple_dashboard.html  simple_index.html  simple_login.html  test_icons.html  url_extraction_test.html  user_info.html  (+1 more)
templates/admin/: backup_status.html  cdn_stats.html  performance_dashboard.html
templates/auth/: error.html  login.html  register.html
templates/components/: feedback_widget.html  footer.html  header.html  ninja_feedback_modal.html  ninja_icons.html  persona_management.html  rotating_banners.html  social_share_buttons.html  theme_switcher.html  toast.html
templates/errors/: 400.html  404.html  500.html  db_error.html  generic_error.html
templates/export/: campaign_pdf.html
templates/gdpr/: privacy_dashboard.html  privacy_policy.html
templates/legal/: cookies.html  legal_notice.html  privacy.html  refund.html  terms.html
templates/payment/: landing.html  pricing.html  subscription.html
templates/stripe/: cancel.html  landing.html  landing_fixed.html  pricing.html  success.html
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_app.py  test_critical_functions.py  test_health_checks.py  test_imports.py  test_products.py
(+10 files in other folders)
